<resources>
    <string name="app_name">CarParts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CarParts</string>
    <string name="nav_header_subtitle">Użytkownik niezalogowany</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_category">Categories</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_all_announcement">All Announcement</string>
    <string name="menu_add_announcement">Add Announcement</string>
    <string name="menu_my_announcement">My Announcement</string>
    <string name="menu_contact">Contact</string>
    <string name="contact_car_parts">Contact CarParts</string>
    <string name="title_activity_geolocation">Map</string>
</resources>
